--- a/css/styles.css
+++ b/css/styles.css
@@ -201,19 +201,19 @@ font-size: 1.2rem;
 }
 
 /* media quary */
-@media screen and (max-width:766px ){
+@media  (max-width:766px ){
   #iphoneImage{
     position: static;
     transform: rotate(0);
-    padding-left:0;
-    text-align:center;
-    
+    text-align: center;
   }
 #title{
-  text-align: center; 
-  
+  text-align: center;
 }
-  .title-heading{
-font-weight:200;
+.title-heading{
+font-weight:100;
+font-size: 2rem;
 }
+
+
 }
